fixed arrows and styles

--- a/style.css
+++ b/style.css
@@ -314,6 +314,11 @@ footer {
         width: 100%; /* full width on mobile */
     }
 
+    .section-block #main-text p,
+    .section-block .section-text p {
+        text-align: justify;
+    }
+
     .section-block img {
         max-width: 90%; /* keep some margin */
     }
@@ -425,7 +430,7 @@ footer {
     font-size: 30px;
     cursor: pointer;
     font-weight: 700;
-    padding: 6px;
+    padding: 2px 10px 6px 8px;
     border-radius: 50%;
     box-shadow: 3px 3px 8px var(--main-text-color), -3px -4px 8px var(--main-text-color);
     transition: transform 0.2s ease;
@@ -457,8 +462,12 @@ footer {
   }
 
   #content {
-    min-height: 90vh;
+    min-height: 115vh;
   };
+
+  .sponsors {
+    gap: 5px;
+  }
 }
 
 .overview-btn {
