--- a/style.css
+++ b/style.css
@@ -468,9 +468,11 @@ footer {
   .sponsors {
     gap: 5px;
   }
-  #next-btn,
+  #next-btn {
+    padding: 2px 10px 8px 8px;
+  }
   #prev-btn {
-    padding: 0px 10px 10px 8px;
+    padding: 0px 10px 11px 8px;
   }
 }
 
