--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     flex-direction: column;
     color: var(--main-text-color);
     width: 100%;
+    min-width: 300px;
 }
 
 h1, h2, h3 {
@@ -33,9 +34,9 @@ header {
     justify-content: space-between;
     flex-wrap: nowrap;
     gap: 5px;
-    min-width: fit-content;
     position: relative;
     z-index: 1000;
+    min-width: 300px;
 }
 
 article header {
@@ -112,7 +113,7 @@ nav ul li a.active {
 main {
     margin: 0 20px;
     padding: 20px;
-    min-height: 54vh;
+    min-height: 58vh;
 }
 
 main a {
@@ -128,7 +129,13 @@ footer {
     color: var(--main-text-color);
     text-align: center;
     padding: 15px 0;
-    margin-top: 40px;
+}
+
+footer .social-links {
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    gap: 1rem;
 }
 
 .lang-switcher {
@@ -290,11 +297,189 @@ footer {
   cursor: pointer;
 }
 
-@media (max-width: 868px) {
+#gallery-carousel {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1.5rem;
+  height: fit-content;
+  width: 100%;
+}
+
+#thumbs-left, #thumbs-right {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.thumb {
+  width: 80px;
+  height: 60px;
+  object-fit: cover;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.thumb:hover {
+    transform: scale(3);
+}
+
+#main-frame {
+  width: fit-content;
+  height: fit-content;
+  max-height: 100%;
+  border-radius: 8px;
+  transition: transform 0.5s ease;
+}
+#main-frame:hover {
+    transform: scale(1.6);
+}
+
+#gallery-modal {
+  position: fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background: rgba(0,0,0,0.8);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  z-index:1000;
+}
+
+.modal-content {
+  background: #fff;
+  padding: 1rem;
+  width: 80%;
+  height: 80%;
+  overflow-y: auto;
+  border-radius: 8px;
+  position: relative;
+}
+
+#modal-close {
+  position: absolute;
+  top:10px; right:20px;
+  font-size: 2rem;
+  cursor: pointer;
+  color: var(--h-text-color);
+}
+
+#modal-grid {
+    padding: 40px 0;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 0.8rem;
+    justify-items: center;
+    justify-content: center;
+}
+
+#next-btn,
+#prev-btn {
+    background: transparent;
+    border: none;
+    color: var(--main-text-color);
+    font-size: 30px;
+    cursor: pointer;
+    font-weight: 700;
+    padding: 2px 10px 6px 8px;
+    border-radius: 50%;
+    box-shadow: 3px 3px 8px var(--main-text-color), -3px -4px 8px var(--main-text-color);
+    transition: transform 0.2s ease;
+}
+
+#next-btn:hover,
+#prev-btn:hover {
+    color: var(--main-text-color-hover);
+    box-shadow: 3px 3px 8px var(--main-text-color-hover), -3px -4px 8px var(--main-text-color-hover);
+    transform: scale(1.1);
+}
+
+#next-btn:active,
+#prev-btn:active {
+    color: var(--main-text-color-active);
+    box-shadow: 3px 3px 8px var(--main-text-color-active), -3px -4px 8px var(--main-text-color-active);
+    transform: scale(1.1);
+}
+
+.overview-btn {
+  background: linear-gradient(135deg, #8752aa, #9937f5);
+  color: #fff;
+  border: none;
+  border-radius: 2rem;
+  padding: 0.5rem 1rem;
+  font-size: 1.1rem;
+  font-weight: 500;
+  cursor: pointer;
+  box-shadow: 0 4px 12px rgba(236, 72, 153, 0.3);
+  transition: all 0.3s ease;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  width: fit-content;
+}
+
+.overview-btn:hover {
+  background: linear-gradient(135deg, var(--header-text-color), #8730d8);
+  box-shadow: 0 6px 16px rgba(141, 54, 222, 0.4);
+  transform: translateY(-1.5px);
+}
+
+.overview-btn:active {
+  transform: translateY(1px);
+}
+
+.gallery-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+}
+
+.locations {
+    display: flex;
+    gap: 5rem;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.locations__card {
+    flex-direction: column;
+    border-radius: 10px;
+    padding: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    box-shadow: 3px 3px 8px var(--main-text-color), -3px -4px 8px var(--main-text-color);
+}
+
+.locations__card__address {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+}
+
+section.gallery {
+    height: 48vh;
+}
+
+#gallery-carousel {
+    height: 100%;
+}
+
+@media (max-width: 1024px) {
     .section-block,
     .section-block.reverse {
         flex-direction: column; /* stack vertically */
         text-align: center; /* center text for mobile */
+    }
+
+    section.gallery {
+        height: 82vh;
     }
 
     .main-block {
@@ -350,163 +535,33 @@ footer {
         right: 1rem;
         top: 0.5rem;
     }
-}
 
-#gallery-carousel {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 1.5rem;
-  height: 25rem;
-  width: 100%;
-}
+    div#modal-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 
-#thumbs-left, #thumbs-right {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
+    .carousel {
+        flex-direction: column;
+    }
 
-.thumb {
-  width: 80px;
-  height: 60px;
-  object-fit: cover;
-  cursor: pointer;
-  transition: transform 0.2s ease;
-}
+    .thumbs {
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
 
-.thumb:hover {
-    transform: scale(1.1);
-}
+    .sponsors {
+        gap: 5px;
+    }
+    #next-btn {
+        padding: 0px 10px 11px 8px;
+    }
+    #prev-btn {
+        padding: 0px 10px 11px 8px;
+    }
 
-#main-frame {
-  width: fit-content;
-  height: fit-content;
-  max-height: 100%;
-  border-radius: 8px;
-}
-
-#gallery-modal {
-  position: fixed;
-  top:0; left:0;
-  width:100%; height:100%;
-  background: rgba(0,0,0,0.8);
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  z-index:1000;
-}
-
-#modal-content {
-  background: #fff;
-  padding: 1rem;
-  width: 80%;
-  height: 80%;
-  overflow-y: auto;
-  border-radius: 8px;
-  position: relative;
-}
-
-#modal-close {
-  position: absolute;
-  top:10px; right:20px;
-  font-size: 2rem;
-  cursor: pointer;
-}
-
-#modal-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 0.8rem;
-    justify-items: center;
-    justify-content: center;
-}
-
-#next-btn,
-#prev-btn {
-    background: transparent;
-    border: none;
-    color: var(--main-text-color);
-    font-size: 30px;
-    cursor: pointer;
-    font-weight: 700;
-    padding: 2px 10px 6px 8px;
-    border-radius: 50%;
-    box-shadow: 3px 3px 8px var(--main-text-color), -3px -4px 8px var(--main-text-color);
-    transition: transform 0.2s ease;
-}
-
-#next-btn:hover,
-#prev-btn:hover {
-    color: var(--main-text-color-hover);
-    box-shadow: 3px 3px 8px var(--main-text-color-hover), -3px -4px 8px var(--main-text-color-hover);
-    transform: scale(1.1);
-}
-
-#next-btn:active,
-#prev-btn:active {
-    color: var(--main-text-color-active);
-    box-shadow: 3px 3px 8px var(--main-text-color-active), -3px -4px 8px var(--main-text-color-active);
-    transform: scale(1.1);
-}
-
-@media (max-width: 480px) {
-  .carousel {
-    flex-direction: column;
-  }
-
-  .thumbs {
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-
-  #content {
-    min-height: 90vh;
-  };
-
-  .sponsors {
-    gap: 5px;
-  }
-  #next-btn {
-    padding: 0px 10px 11px 8px;
-  }
-  #prev-btn {
-    padding: 0px 10px 11px 8px;
-  }
-}
-
-.overview-btn {
-  background: linear-gradient(135deg, #8752aa, #9937f5);
-  color: #fff;
-  border: none;
-  border-radius: 2rem;
-  padding: 0.5rem 1rem;
-  font-size: 1.1rem;
-  font-weight: 500;
-  cursor: pointer;
-  box-shadow: 0 4px 12px rgba(236, 72, 153, 0.3);
-  transition: all 0.3s ease;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  width: fit-content;
-}
-
-.overview-btn:hover {
-  background: linear-gradient(135deg, var(--header-text-color), #8730d8);
-  box-shadow: 0 6px 16px rgba(141, 54, 222, 0.4);
-  transform: translateY(-1.5px);
-}
-
-.overview-btn:active {
-  transform: translateY(1px);
-}
-
-.gallery-title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 20px;
+    #content h1 {
+        margin-top: 0;
+    }
 }
