--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
-    --h-text-color: #5a189a;
+    --h-text-color: wheat;
     --main-text-color: wheat;
     --main-text-color-hover: #c2b08f;
     --main-text-color-active: #a59471;
-    --header-text-color: #8857a8;
+    --header-item-hover: #9a6aba;
+    --header-text-color: wheat;
+    --header-text-active: #6f3297;
     --burger-menu-background: rgb(78, 43, 101);
 
     margin: 0;
@@ -11,7 +13,7 @@ body {
     line-height: 1.6;
     height: 100%;
     display: flex;
-    background: url('images/header-footer-bg.jpg') center/cover;
+    background: url('images/backgrounds/header-footer-bg-mirror.jpg') center/cover;
     flex-direction: column;
     color: var(--main-text-color);
     width: 100%;
@@ -26,6 +28,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     min-height: calc(100vh - 175px);
+    gap: 10px;
 }
 
 h1, h2, h3 {
@@ -39,14 +42,28 @@ h1, h2, h3 {
 header {
     background: transparent;
     color: var(--main-text-color);
-    padding: 10px 20px;
+    padding: 10px 0;
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
-    gap: 5px;
-    position: relative;
+    gap: 60px;
     z-index: 1000;
     min-width: 300px;
+    margin-left: 8px;
+    margin-right: 8px;
+    align-items: center;
+}
+
+.header__logo-container {
+    display: flex;
+    text-align: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+.header-logo__image {
+    width: 26px;
+    height: 26px;
 }
 
 article header {
@@ -98,7 +115,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {    
-    background-color: #9a6aba;
+    background-color: var(--header-item-hover);
     text-decoration: none;
     color: var(--main-text-color);
 }
@@ -109,14 +126,9 @@ nav ul li a:hover {
     -webkit-text-fill-color: transparent;
 }
 
-.subscribe-btn.active,
-.subscribe-btn:hover {
-    color: var(--main-text-color) !important;    
-    background-color: var(--header-text-color) !important;
-}
 
 nav ul li a.active {    
-    background-color: var(--header-text-color);
+    background-color: var(--header-text-active);
     color: var(--main-text-color);
 }
 
@@ -151,7 +163,6 @@ footer .social-links {
 .lang-switcher {
     display: flex;
     gap: 8px;
-    margin-left: 15px;
     flex-wrap: nowrap;
     justify-content: flex-end;
 }
@@ -221,8 +232,8 @@ footer .social-links {
 .logo { 
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
     min-width: fit-content;
+    align-items: flex-end;
 }
 
 .logo .logo-image {
@@ -408,9 +419,10 @@ footer .social-links {
     transform: scale(1.1);
 }
 
+.documents__card__save-btn,
 .overview-btn {
   background: linear-gradient(135deg, #8752aa, #9937f5);
-  color: #fff;
+  color: var(--h-text-color);
   border: none;
   border-radius: 2rem;
   padding: 0.5rem 1rem;
@@ -452,6 +464,17 @@ footer .social-links {
     margin-bottom: 40px;
 }
 
+.documents {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-direction: row;
+    gap: 25px;
+}
+
+.documents__card,
 .locations__card {
     flex-direction: column;
     border-radius: 10px;
@@ -461,6 +484,16 @@ footer .social-links {
     justify-content: space-between;
     gap: 20px;
     box-shadow: 3px 3px 8px var(--main-text-color), -3px -4px 8px var(--main-text-color);
+}
+
+.documents__card {
+    gap: 10px;
+}
+
+.documents__card__title {
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
 
 .locations__card__address {
@@ -484,6 +517,16 @@ section.gallery {
 
 .section-image.main-page-image {
     width: 18rem;
+}
+
+@media (max-width: 1279px) {
+    #content .article-content {
+        max-height: fit-content;
+    }
+
+    .main-block #main-text {
+        width: 100%;
+    }
 }
 
 @media (max-width: 1024px) {
@@ -524,7 +567,7 @@ section.gallery {
         flex-direction: column;
         position: absolute;
         left: 0;
-        background: url('images/header-footer-bg.jpg') center/cover;
+        background: url('images/backgrounds/header-footer-bg-mirror.jpg') center/cover;
         top: 50px; /* just below header */
         padding: 10px 0;
         box-shadow: 3px 4px 3px #754794b3;
@@ -539,12 +582,6 @@ section.gallery {
 
     .burger-menu {
         display: block;
-    }
-
-    .lang-switcher {
-        position: absolute;
-        right: 1rem;
-        top: 0.5rem;
     }
 
     div#modal-grid {
@@ -566,7 +603,7 @@ section.gallery {
         gap: 5px;
     }
     #next-btn {
-        padding: 0px 10px 11px 8px;
+        padding: 5px 10px 11px 8px;
     }
     #prev-btn {
         padding: 0px 10px 11px 8px;
@@ -575,14 +612,28 @@ section.gallery {
     #content h1 {
         margin-top: 0;
     }
-}
 
-@media (max-width: 1279px) {
-    #content .article-content {
-        max-height: fit-content;
+    .section-image.main-page-image {
+        width: 100%;
     }
 
-    .main-block #main-text {
-        width: 100%;
+    #main-content {
+        gap: 25px;
+    }
+}
+
+@media (max-width: 420px) {
+    .documents__card,
+    .locations__card {
+        padding: 30px 4px;
+    }
+}
+
+
+@media (max-width: 320px) {
+    header {
+        gap: 1px;
+        margin-left: 3px;
+        margin-right: 3px;
     }
 }
